--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         longest of any Mac ever.
                     </p>
                     <div id="accessory">
-                        <!-- select button for Memory  -->
+                        <!-- select buttons for Memory  -->
                         <div class="pt-10">
                             <h2 class="font-bold text-sm mb-2">Memory</h2>
                             <button id="memory-8gb"
@@ -56,7 +56,7 @@
                             </button>
                         </div>
 
-                        <!-- select button for Memory  -->
+                        <!-- select buttons for Storage  -->
                         <div class="pt-10">
                             <h2 class="font-bold text-sm mb-2">Storage</h2>
                             <button id="storage-256gb"
@@ -73,7 +73,7 @@
                             </button>
                         </div>
 
-                        <!-- select button for delivery -->
+                        <!-- select buttons for delivery -->
                         <div class="pt-10">
                             <h2 class="font-bold text-sm mb-2">Choose your delivery option</h2>
                             <button id="free"
@@ -87,6 +87,7 @@
                         </div>
                     </div>
 
+                    <!-- All Calculations -->
                     <div class="font-bold text-sm py-2 mt-10">
                         Best Price:<span class="ml-44" id="price">1299</span>$
                     </div>
@@ -109,8 +110,8 @@
                         Total Price<span class="ml-44" id="total">1299</span>$
                     </div>
 
+                    <!-- Promo code input-->
                     <div id="add-promo">
-                        <!-- promo input -->
                         <h2 class="mt-5 text-sm font-bold">Add promo code</h2>
                         <input id="promo-text" class="text-sm p-2 border-black shadow rounded mt-2"
                             placeholder="Enter promo code">
@@ -120,7 +121,6 @@
                         </button>
                         <p id="error" class="text-sm font-bold text-red-500 mt-2 mb-4"></p>
                     </div>
-
                 </div>
             </div>
         </div>
