--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                             <h2 class="font-bold text-sm mb-2">Choose your delivery option</h2>
                             <button id="free"
                                 class="p-2 text-sm border border-gray-200 shadow hover:shadow-lg rounded hover:bg-gray-400">
-                                Friday, Aug 25 Free Prime delivery
+                                Friday, Aug 25 FREE Prime Delivery
                             </button>
                             <button id="fast"
                                 class="p-2 text-sm border border-gray-200 shadow hover:shadow-lg rounded hover:bg-gray-400">
-                                Friday, Aug 21 Delivery 20$
+                                Friday, Aug 21 Delivery Charge 20$
                             </button>
                         </div>
                     </div>
