--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
 
                 <div class="mt-10 max-w-lg mx-auto mr-60">
                     <h3 class="text-4xl font-bold mb-2">Customize your Blue 24-inch iMac with Apple M1 chip.</h3>
-                    <p class="text-sm">The Apple M1 chip gives the 13‑inch MacBook Pro speed and power
+                    <p class="text-sm">The Apple M1 chip gives the 24‑inch iMac speed and power
                         beyond belief. With up to 2.8x CPU performance. Up to 5x the graphics speed. Our most advanced
-                        Neural Engine for up to 11x faster machine learning. And up to 20 hours of battery life — the
-                        longest of any Mac ever.
+                        Neural Engine for up to 11x faster machine learning. It is the greatest of any iMac ever.
                     </p>
                     <div id="accessory">
                         <!-- select buttons for Memory  -->
